<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_child"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.begginers.app2.lifecycletest.ChildActivity">
    <LinearLayout
        android:id="@+id/linearLayoutChild"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvOut12"
            android:text="@string/tMesg"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvOut13"
            android:text="@string/tMesg1"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginBottom="@dimen/marginBottom"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvOut14"
            android:text="@string/tMesg2"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginBottom="@dimen/marginBottom"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="@dimen/width"
            android:layout_height="wrap_content"
            android:id="@+id/btnMainActivity"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marginTop"
            android:text="@string/btnMesg"/>

    </LinearLayout>

</LinearLayout>
